seaqt/QtGui/gen_qfontinfo.h

class QFont;
class QFontInfo;
typedef struct QFont QFont;
typedef struct QFontInfo QFontInfo;
QFontInfo* QFontInfo_new(QFont* param1);
QFontInfo* QFontInfo_new2(QFontInfo* param1);
void QFontInfo_operatorAssign(QFontInfo* self, QFontInfo* param1);
void QFontInfo_swap(QFontInfo* self, QFontInfo* other);
struct miqt_string QFontInfo_family(const QFontInfo* self);
struct miqt_string QFontInfo_styleName(const QFontInfo* self);
int QFontInfo_pixelSize(const QFontInfo* self);
int QFontInfo_pointSize(const QFontInfo* self);
double QFontInfo_pointSizeF(const QFontInfo* self);
bool QFontInfo_italic(const QFontInfo* self);
int QFontInfo_style(const QFontInfo* self);
int QFontInfo_weight(const QFontInfo* self);
bool QFontInfo_bold(const QFontInfo* self);
bool QFontInfo_underline(const QFontInfo* self);
bool QFontInfo_overline(const QFontInfo* self);
bool QFontInfo_strikeOut(const QFontInfo* self);
bool QFontInfo_fixedPitch(const QFontInfo* self);
int QFontInfo_styleHint(const QFontInfo* self);
int QFontInfo_legacyWeight(const QFontInfo* self);
bool QFontInfo_exactMatch(const QFontInfo* self);